[project]
name = "oqee-rewind"
version = "0.1.0"
description = "Oqee TV Live Downloader"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "NohamR" }
]

dependencies = [
    "aiohttp>=3.13.2",
    "InquirerPy>=0.3.4",
    "python-dotenv>=1.2.1",
    "pywidevine>=1.9.0",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
oqee-rewind = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pylint>=3.3.9",
]
